# daily_fantasy

./: .env.example  .gitignore  CLAUDE.md  README.md  check_players.py  find_miller.py  pyproject.toml  refresh_cookies.py  requirements.txt  run_dashboard.py  run_scheduler.py
browser_extension/: background.js  manifest.json  popup.html  popup.js
config/: settings.yaml.example
config/sports/: mlb.yaml  nba.yaml  nfl.yaml  nhl.yaml
scripts/: edit_contest_lineups.py  extract_entries_browser.py  fanduel_fetch_contests.py  fanduel_fetch_players.py  fetch_contests.py  generate_fanduel_lineups.py  generate_lineups.py  monitor_contests.py  refresh_fanduel_tokens.py  run_fanduel_scheduler.py  run_nfl_pipeline.py  run_pipeline.py  run_scheduler.py  submit_lineups.py  submit_max_lineups.py  test_e2e.py  test_submission.py  yahoo_login.py
scripts/archive/: debug_submission.py  test_edit_lineup.py  test_submission_full.py  test_submission_v2.py  test_user_entries_api.py
src/: __init__.py
src/common/: __init__.py  auto_debug.py  config.py  database.py  exceptions.py  models.py  notifications.py
src/contests/: selector.py
src/dashboard/: __init__.py  api.py
src/fanduel/: __init__.py  api.py  browser.py  scheduler.py
src/lineup_manager/: __init__.py  late_swap.py  news_monitor.py  series_manager.py  swap_executor.py  tracker.py
src/monitoring/: __init__.py  history.py  live_scoring.py  reports.py
src/optimizer/: __init__.py  builder.py  exporter.py  strategies.py  yahoo_optimizer.py
src/projections/: __init__.py  aggregator.py  transformer.py  vegas_lines.py
src/projections/sources/: __init__.py  base.py  dailyfaceoff.py  dailyfantasyfuel.py  manual.py
src/scheduler/: __init__.py  alerts.py  contest_filter.py  fill_monitor.py  job_functions.py  jobs.py  manager.py  player_swapper.py  runner.py
src/scheduler/jobs/: __init__.py  base.py  contest_sync.py  injury_monitor.py  projection_sync.py  submission.py
src/yahoo/: __init__.py  api.py  auth.py  browser.py  contests.py  editor.py  players.py  results.py  submission.py
