[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-fantasy-automation"
version = "0.1.0"
description = "Automated daily fantasy lineup generation and submission for Yahoo DFS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daily Fantasy User"}
]
keywords = ["daily-fantasy", "dfs", "yahoo", "lineup-optimizer", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "pydfs-lineup-optimizer>=3.6.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "apscheduler>=3.10.0",
    "webdriver-manager>=4.0.2",
    "sendgrid>=6.12.5",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
fast-solver = [
    "mip>=1.15.0",
]

[project.scripts]
dfs-pipeline = "scripts.run_pipeline:main"
dfs-fetch = "scripts.fetch_contests:main"
dfs-generate = "scripts.generate_lineups:main"
dfs-submit = "scripts.submit_lineups:main"
dfs-monitor = "scripts.monitor_contests:main"

[project.urls]
Homepage = "https://github.com/user/daily-fantasy-automation"
Documentation = "https://github.com/user/daily-fantasy-automation#readme"
Repository = "https://github.com/user/daily-fantasy-automation"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "data/",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]
